[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customized-drivers"
version = "0.1.0"
dependencies = [
    "numpy==1.26.4",
    "requires>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]
